# write_mode

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: check.yaml
src/: lib.rs
